log

Wed 13 Mar 2024 08:35:53 PM UTC: 
 tests:  0|7
total_score: 0/70
e14809f
Wed 13 Mar 2024 08:41:43 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’; did you mean ‘find_max’? [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
      |                  find_max
cc1: all warnings being treated as errors
Compilation failed
0cf467c
Wed 13 Mar 2024 08:44:03 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’; did you mean ‘find_max’? [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
      |                  find_max
cc1: all warnings being treated as errors
Compilation failed
4597643
Wed 13 Mar 2024 08:48:08 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’; did you mean ‘find_max’? [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
      |                  find_max
cc1: all warnings being treated as errors
Compilation failed
9eb2105
Wed 13 Mar 2024 08:49:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’; did you mean ‘findmax’? [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
      |                  findmax
cc1: all warnings being treated as errors
Compilation failed
9ba5245
Wed 13 Mar 2024 08:49:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c8186fe
Wed 13 Mar 2024 08:53:57 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:35:7: error: variable ‘nuevoArr’ set but not used [-Werror=unused-but-set-variable]
   35 |   int nuevoArr[size];
      |       ^~~~~~~~
exercises.c:34:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   34 |   int temp = arr[size];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
0721ee4
Wed 13 Mar 2024 08:54:19 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: variable ‘nuevoArr’ set but not used [-Werror=unused-but-set-variable]
   34 |   int nuevoArr[size];
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
538acb5
Wed 13 Mar 2024 09:02:56 PM UTC: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 10/70
a15c532
Wed 13 Mar 2024 09:11:28 PM UTC: 
 exercises.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:41:3: error: ‘array’ undeclared (first use in this function); did you mean ‘arr’?
   41 |   array = tempArray;
      |   ^~~~~
      |   arr
exercises.c:41:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ed1e4f6
Wed 13 Mar 2024 09:11:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
b1473db
Wed 13 Mar 2024 09:13:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:41:7: error: expected expression before ‘]’ token
   41 |   arr[] = tempArray[];
      |       ^
exercises.c:34:7: error: variable ‘tempArray’ set but not used [-Werror=unused-but-set-variable]
   34 |   int tempArray[size];
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a820670
Wed 13 Mar 2024 09:13:55 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
8cd0f3c
Wed 13 Mar 2024 09:18:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:41:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   41 |   *tempArr = malloc(sizeof(int) * size);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
5a08a10
Wed 13 Mar 2024 09:19:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:41:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   41 |   *tempArr = (int*) malloc(sizeof(int) * size);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
e0e5166
Wed 13 Mar 2024 09:19:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:41:3: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   41 |   (int*) *tempArr =  malloc(sizeof(int) * size);
      |   ^
exercises.c:41:19: error: lvalue required as left operand of assignment
   41 |   (int*) *tempArr =  malloc(sizeof(int) * size);
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
b307b4a
Sat 16 Mar 2024 03:03:13 PM UTC: 
 exercises.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 10/70
6bb79f7
Sat 16 Mar 2024 03:06:15 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
2479073
Sat 16 Mar 2024 03:15:54 PM UTC: 
 exercises.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
d065db6
Sat 16 Mar 2024 03:17:12 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:66:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   66 |       if(arr[i] % 2 == 0)
      |       ^~
exercises.c:68:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   68 |         nuevoArr[k] = arr[i];
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3a119a8
Sat 16 Mar 2024 03:17:34 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 20/70
7894def
